# pidcast

./: .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CLAUDE.md  README.md  podcasts.csv  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: kb-grooming.json
.githooks/: pre-commit
.github/workflows/: ci.yml
config/: analysis_prompts.json  glossaries.yaml  models.yaml  prompts.yaml  reference_transcripts.json
docs/: architecture.md  development-guide.md  state-audit.md
docs/adr/: 0001-transcription-providers.md  0002-llm-providers.md
docs/ideation/pidcast-evals/: README.md  contract.md  prd-phase-1.md  prd-phase-2.md  prd-phase-3.md  spec-phase-1.md  spec-phase-2.md  spec-phase-3.md
docs/ideation/pidcast-sync/: contract.md  prd-phase-1.md  prd-phase-2.md  prd-phase-3.md  spec-phase-1.md  spec-phase-2.md  spec-phase-3.md
docs/ideation/pidcast-ux-overhaul/: README.md  contract.md  prd-phase-1.md  prd-phase-2.md  prd-phase-3.md  spec-phase-1.md  spec-phase-2.md  spec-phase-3.md
docs/plans/: 2026-03-06-cli-presets.md
docs/superpowers/specs/: 2026-06-30-duplicate-prompt-redesign-design.md
docs/ultrathink/: CLI-ULTRATHINK.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md
scripts/: migrate_data.py
src/: .gitignore  CLAUDE.md  README.md  content-parser.py  yt_transcribe.py
src/.claude/: settings.local.json
src/pidcast/: __init__.py  __main__.py  analysis.py  apple_podcasts.py  checkpoint.py  chunking.py  cli.py  config.py  config_manager.py  cookies.py  diarization.py  digest.py  discovery.py  download.py  duplicate.py  exceptions.py  history.py  library.py  markdown.py  migrate.py  model_selector.py  resume.py  rss.py  setup.py  summarization.py  sync.py  transcription.py  ui.py  utils.py  workflow.py
src/pidcast/commands/: __init__.py  analyze.py  diarize.py  history.py  info.py  lib.py  listing.py  log.py  transcribe.py
src/pidcast/evals/: __init__.py  batch_runner.py  cli.py  comparison.py  cost_tracker.py  paths.py  prompt_manager.py  provider_comparison.py  reference_transcripts.py  results.py  retry.py  runner.py  validation.py
src/pidcast/evals/data/: eval_prompts.json  (+1 more)
src/pidcast/providers/: __init__.py  claude_provider.py  elevenlabs_provider.py  groq_provider.py  whisper_provider.py
tests/: conftest.py  test_analysis.py  test_apple_podcasts.py  test_checkpoint_resume.py  test_chunking.py  test_claude_provider.py  test_cli_grammar.py  test_config.py  test_diarize_existing.py  test_digest.py  test_discovery.py  test_duplicate_detection.py  test_duplicate_prompt.py  test_elevenlabs_provider.py  test_estimation.py  test_history.py  test_history_command.py  test_library.py  test_log_command.py  test_markdown.py  test_migrate.py  test_model_selector.py  test_output_dir_resolution.py  test_presets.py  test_provider_comparison.py  test_rss.py  test_run_history.py  test_transcription_provider.py  test_ui.py  test_utils.py  test_whisper_prompt.py  test_whisper_provider.py
tests/fixtures/: sample_feed.xml
(+3 files in other folders)
