[project]
name = "pidcast"
version = "0.1.0"
description = "YouTube transcription tool with Whisper and LLM analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2025.10.22",
    "groq>=1.0.0",
    "python-dotenv>=1.2.1",
    "rich>=13.0.0",
]

[project.scripts]
yt-transcribe = "src.yt_transcribe:main"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
# Target Python 3.10+ (for broad compatibility)
target-version = "py310"

# Line length (default is 88, but adjust if needed)
line-length = 100

# Source code directory
src = ["src"]

# Exclude patterns
extend-exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "*.pyc",
    ".ruff_cache",
    "transcripts/",
    "data/",
]

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade (modernize Python code)
    "B",    # flake8-bugbear (find likely bugs)
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]

# Ignore specific rules that might be too strict
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
    "C901",   # Function too complex (might want to refactor but not enforce yet)
]

[tool.ruff.lint.per-file-ignores]
# Don't require type hints in scripts
"src/yt_transcribe.py" = ["N802", "N803", "N806"]  # Allow lowercase function/variable names

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Format docstrings
docstring-code-format = true

# Unix-style line endings
line-ending = "lf"
