[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pidcast"
version = "0.2.0"
description = "YouTube transcription tool with Whisper and LLM analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2025.10.22",
    "groq>=1.0.0",
    "python-dotenv>=1.2.1",
    "rich>=13.0.0",
]

[project.scripts]
pidcast = "pidcast.cli:main"
yt-transcribe = "pidcast.cli:main"
pidcast-eval = "pidcast.evals.cli:eval_main"

[tool.hatch.build.targets.wheel]
packages = ["src/pidcast"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]
extend-exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "*.pyc",
    ".ruff_cache",
    "data/",
    "config/",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
